--- a/30_grafana/20_grafana-configs.yaml
+++ b/30_grafana/20_grafana-configs.yaml
@@ -11,6 +11,7 @@ data:
     org_role = Viewer
 
     [security]
+    disable_initial_admin_creation = true
     allow_embedding = true
 
     [users]
