--- a/130_argocd/k8s-experience/001_traefik.yaml
+++ b/130_argocd/k8s-experience/001_traefik.yaml
@@ -4,7 +4,7 @@ metadata:
   name: traefik
   namespace: argocd
 spec:
-  project: k8s-experience-olymp
+  project: k8s-experience
   source:
     repoURL: https://github.com/mnlipp/kubernetes-experience.git
     path: 999_misc/k3s-configuration/traefik
