--- a/130_argocd/k8s-experience/025_cert-manager.yaml
+++ b/130_argocd/k8s-experience/025_cert-manager.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cert-manager
   namespace: argocd
 spec:
-  project: k8s-experience-olymp
+  project: k8s-experience
   source:
     repoURL: https://charts.jetstack.io
     targetRevision: v1.12.2
