--- a/999_misc/k3s-configuration/metallb/ipaddresspool.yaml
+++ b/999_misc/k3s-configuration/metallb/ipaddresspool.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: metallb-system
 spec:
   addresses:
-  - 192.168.19.10/32
-  - 192.168.19.20/30
-
+  - 192.168.179.20/32
+  - 192.168.179.28/30
+  autoAssign: true
+  avoidBuggyIPs: false
