--- a/999_misc/exporters/prometheus-fritz-docsis/fritz-docsis-deployment.yaml
+++ b/999_misc/exporters/prometheus-fritz-docsis/fritz-docsis-deployment.yaml
@@ -1,8 +1,8 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: fritz-docsis
   namespace: monitoring
+  name: fritz-docsis
   labels:
     app: fritz-docsis
 spec:
@@ -16,36 +16,25 @@ spec:
         app: fritz-docsis
     spec:
       containers:
-        - name: fritz-docsis
-          image: ghcr.io/mnlipp/fritzdocsis:0.4.0
-          command:
-            - /fritzDocsis
-          args:
-            - '--url=$(URL)'
-            - '--username=$(USERNAME)'
-            - '--password=$(PASSWORD)'
-          ports:
-            - containerPort: 2112
-              protocol: TCP
-          env:
-            - name: URL
-              valueFrom:
-                configMapKeyRef:
-                  name: fritz-docsis-config
-                  key: url
-            - name: USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: fritz-docsis-secret
-                  key: username
-            - name: PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: fritz-docsis-secret
-                  key: password
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
-          imagePullPolicy: IfNotPresent
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
+      - name: fritz-docsis
+        image: ghcr.io/mnlipp/fritzdocsis:0.4.0
+        command: ["/fritzDocsis"]
+        args: ["--url=$(URL)", "--username=$(USERNAME)", "--password=$(PASSWORD)" ]
+        env:
+        - name: URL
+          valueFrom:
+            configMapKeyRef:
+              name: fritz-docsis-config
+              key: url
+        - name: USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: fritz-docsis-secret
+              key: username
+        - name: PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: fritz-docsis-secret
+              key: password
+        ports:
+        - containerPort: 2112
