--- a/010_node-exporter/10_daemonset.yaml
+++ b/010_node-exporter/10_daemonset.yaml
@@ -27,6 +27,7 @@ spec:
         - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
         - --collector.netclass.ignored-devices=^(veth.*)$
         - --collector.netdev.device-exclude=^(veth.*)$
+        - --collector.ksmd
         - --collector.textfile.directory=/var/lib/prometheus/node-exporter
         ports:
         - containerPort: 9100
