Update section on tuning.

--- a/015_rook/kustomization.yaml
+++ b/015_rook/kustomization.yaml
@@ -41,3 +41,8 @@ patches:
       network:
         # Because we want to support client access
         provider: host
+      resources:
+        osd:
+          requests:
+            cpu: "1000m"
+            memory: "1024Mi"
