--- a/007_argocd/k8s-experience/120_grafana.yaml
+++ b/007_argocd/k8s-experience/120_grafana.yaml
@@ -11,3 +11,7 @@ spec:
   destination:
     name: in-cluster
     namespace: monitoring
+  syncPolicy:
+    syncOptions:
+      - ServerSideApply=true
+    
