--- a/007_argocd/k8s-experience/005a_traefik.yaml
+++ b/007_argocd/k8s-experience/005a_traefik.yaml
@@ -1,16 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb
+  name: traefik
   namespace: argocd
 spec:
   project: k8s-experience
   source:
-    repoURL: ssh://gitolite3@hestia.lan.mnl.de/k8s-experience-tc1.git
-    path: 999_misc/k3s-configuration/metallb
+    repoURL: https://github.com/mnlipp/kubernetes-experience.git
+    path: 005_k3s/traefik
+    helm:
+      releaseName: traefik
   destination:
     name: in-cluster
-    namespace: metallb-system
+    namespace: traefik
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+    
