--- a/007_argocd/k8s-experience/005b_metallb.yaml
+++ b/007_argocd/k8s-experience/005b_metallb.yaml
@@ -1,19 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: traefik
+  name: metallb
   namespace: argocd
 spec:
   project: k8s-experience
   source:
     repoURL: https://github.com/mnlipp/kubernetes-experience.git
-    path: 999_misc/k3s-configuration/traefik
-    helm:
-      releaseName: traefik
+    path: 005_k3s/metallb
   destination:
     name: in-cluster
-    namespace: traefik
+    namespace: metallb-system
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
-    
